# PokerBot

./: .gitignore  bot.py  client_wrapper.py  main.py  multi agent test.py  pendulum-actorcritic.py  pongtest.py  ponk-config.py  ponk.py  ponk2.py  ponk2_create folded.py  pyproject.toml
src/pokerbot/: __init__.py  bot.py  comparator.py  env.py  ppo.py  train_selfplay.py
tests/: test_env.py
training/: info.json  log.json  model.h5
training/test2/: info.json  log.json  model.h5
